pop text change

--- a/music/pop.html
+++ b/music/pop.html
@@ -34,7 +34,8 @@
                   La musique pop
               </h2>
               <div class="paragraph">
-                  La musique pop est un genre musical apparu dans les années 1960 au Royaume-Uni et aux États-Unis.
+                  La musique pop est un genre musical apparu au Royaume-Uni et aux États-Unis.
+                  Par apport au <a href="rock.html#">rock</a>, la pop est plus douce et mélancolique.
                   En 1962,
                   <div class="multi-link">
                       <span>les Beatles</span>
@@ -58,16 +59,12 @@
                           <a href="https://www.youtube.com/watch?v=1Au_QW5MJNI" target="_blank"><img class="yt-icon"
                                   src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>. La musique
-                  pop a bien évolué depuis cette époque.
-                  La pop est une version plus douce et mélancolique du
-                  <a href="rock.html#">rock</a>. C’est un genre musical accessible au
-                  grand public.
-                  Elle se caractérise par des mélodies et harmonies vocaliques. Elle pioche ses influences dans
-                  différents styles ( R&B, jazz, folk, soul, funk, classique, techno, latino…). Les chanteurs
-                  parlent souvent des sentiments, de la relations hommes/femmes : « I don't want to leave her now,
-                  You know I believe her now » , qui se traduit par « Je ne veux pas la quitter maintenant, tu sais
-                  que je la crois maintenant ». Ce titre, ‘’Something’’, chanté par
+                  </div>. La pop est toujours accessible
+                  au grand public, ce qui se caractérise par des mélodies et harmonies vocaliques. Elle pioche ses
+                  influences dans différents styles (R&B, jazz, folk, soul, funk, classique, techno, latino…). Les
+                  chanteurs chantent souvent sur les sentiments et sur la relation homme/femme : « I don ‘t want to
+                  leave her now, You know I believe her now », qui se traduit par « Je ne veux pas la quitter
+                  maintenant, tu sais que je la crois maintenant ». Ce titre, "Something", chanté par
                   <div class="multi-link">
                       <span> George Harrison</span>
                       <div>
@@ -134,13 +131,11 @@
                   Classic pop
               </h2>
               <p>
-                  La musique pop traditionnelle est composée de musique populaire occidentale, qui précède généralement
-                  l'avènement du rock and roll au milieu des années 1950. Les chansons les plus populaires et les plus
-                  durables de ce style de musique sont connues comme standards pop ou standards américains. Plus
-                  généralement, le terme "standard" peut être appliqué à toute chanson populaire qui est devenue très
-                  largement connue dans la culture traditionnelle.
+                  La musique pop traditionnelle viens du Rock, ce qui est simple et doux, avec des rythmes simples et
+                  jolis. La musique pop s’appelle aussi standard pop. Normalement le chanteur chante avec une guitare ou
+                  un piano.
               </p>
-              <span class="source">Source : dude trust me</span>
+              <span class="source">Source : fr.wikipedia.org/wiki/Pop_(musique)</span>
               <div class="paragraph">Artistes:
                   <div class="multi-link">
                       <span> Bob Dylan</span>
@@ -200,14 +195,13 @@
                   Pop Rock
               </h2>
               <p>
-                  Le pop rock est un genre musical mêlant le style pop et ses paroles légères à des chansons rock
-                  typiquement basées sur la guitare. Les détracteurs du pop rock considèrent souvent le genre comme une
-                  version plus commerciale et moins authentique du rock.
-                  Il est plus doux et plus accessible que le <a href="rock.html#">Rock and
-                      Roll</a>. Les instruments utilisés sont le plus
-                  souvent la guitare électrique, la basse, la batterie, le clavier et le synthétiseur.
+                  Le Pop Rock, mêlant le style Pop et Rock, est basé sur la guitare. Le pop Rock est plus doux et plus
+                  accessible que le<a href="rock.html#">Rock and Roll</a>. C ‘est une version plus commerciale dans le
+                  domaine de la musique et ceux qui écoutent
+                  sont souvent des jeunes. Les instruments utilisés sont le plus souvent la guitare électrique, la
+                  basse, la batterie, le clavier et le synthétiseur.
               </p>
-              <span class="source">Source : dude trust me</span>
+              <span class="source">Source : fr.wikipedia.org/wiki/Pop_rock</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
@@ -268,14 +262,12 @@
                   Country Pop
               </h2>
               <p>
-                  La Country Pop est un genre de fusion entre la musique country et la musique pop, qui a été développée
-                  par des membres du genre country dans le but de toucher un public plus large et plus traditionnel. En
-                  produisant des chansons country qui utilisaient de nombreux styles et sons de la musique pop,
-                  l'industrie de la musique country a réussi à attirer de nouveaux auditeurs sans perdre son auditoire
-                  traditionnel. La musique pop country regroupe souvent différents genres comme le rock, la pop et le
-                  country .
+                  La Country Pop est un genre de fusion entre la musique country et la musique pop. La guitare est
+                  essentielle dans la Country Pop. Les paroles sont souvent sur le chagrin d’amour ou la nostalgie. Par
+                  rapport à la musique Country, la Country Pop ajoute plus d’ambiance romantique, ce qui la rend plus
+                  créative et plus accessible au public.
               </p>
-              <span class="source">Source : dude trust me</span>
+              <span class="source">Source :fr.wikipedia.org/wiki/Country_pop</span>
               <div class="paragraph">Artistes:
                   <div class="multi-link">
                       <span>Merle Haggard</span>
@@ -374,9 +366,14 @@
                   Le livre « The All music Guide to Electronica » définit la dream pop comme « un sous-genre
                   atmosphérique du rock alternatif qui repose autant sur les textures sonores que sur les mélodies ».
                   Les caractéristiques sonores de la dream pop sont un chant murmuré, ainsi que l'utilisation d'effets
-                  de guitare produisant souvent un « mur de bruit ».
+                  de guitare produisant souvent un « mur de bruit ».Dans la dream Pop, le plus important c’est
+                  l’ambiance qu’il crée. L‘utilisation d’effets de guitare produit souvent un « mur de bruit ». Quand on
+                  écoute la dream pop, on pense souvent à de belles choses dans la vie : des fleurs, des rêves, des
+                  beaux paysages etc. Le livre « The All music Guide to Electronica » définit la dream pop comme « un
+                  sous-genre atmosphérique du rock alternatif qui repose autant sur les textures sonores que sur les
+                  mélodies ».
               </p>
-              <span class="source">Source : dude trust me</span>
+              <span class="source">Source : fr.wikipedia.org/wiki/Dream_pop</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
@@ -438,9 +435,8 @@
                   Dance Pop
               </h2>
               <p>
-                  La pop dance se caractérise généralement par des rythmes forts, avec des structures de chansons
-                  faciles et simples, qui ressemblent généralement plus à la musique pop que le genre de danse plus
-                  libre, avec un accent mis sur la mélodie ainsi que sur des airs entraînants.
+                  La pop dance, c’est la musique idéale pour danser avec des rythmes forts, des structures de chansons
+                  faciles et simples, un accent mis sur la mélodie ainsi que sur des airs entraînants.
               </p>
               <div class="paragraph">
                   Artistes:
@@ -500,16 +496,12 @@
                   Synthpop
               </h2>
               <p>
-                  La synthpop (également connue sous les termes electropop et technopop) se définit par l'utilisation de
-                  synthétiseurs, boîtes à rythmes et séquenceurs, souvent utilisés pour remplacer d'autres instruments.
-                  Les synthétiseurs servent habituellement à imiter les sons clichés des instruments orchestraux. Les
-                  chants sont également inclus, et les paroles sont généralement inspirées de thèmes optimistes comme
-                  l’amour.
+                  La synthpop utilise des synthétiseurs, boîtes à rythmes et séquenceurs. Ils sont souvent utilisés pour
+                  remplacer d’autres instruments. Les chants sont également inclus, et les paroles sont généralement
+                  inspirées de thèmes optimistes comme l’amour.
               </p>
-              <span class="source">Source : dude trust me</span>
+              <span class="source">Source : fr.wikipedia.org/wiki/Synthpop</span>
               <div class="paragraph">Artistes:
-
-
                   <div class="multi-link">
                       <span> New Order</span>
                       <div>
@@ -568,18 +560,15 @@
                   K-pop
               </h2>
               <p>
-                  Bien que la K-pop fasse en général référence à la musique pop de Corée du Sud, il faut prendre en
-                  compte l'évolution constante de ce genre musical, qui possède un large spectre musical mais aussi
-                  visuel.
-                  L'Institut National de l'Audiovisuel français, l'INA, définit la K-pop comme étant une "musique de
-                  synthèse accompagnée de chorégraphies calibrées au millimètre, portée par des chanteurs séduisants, à
-                  la pointe de la mode". Les chansons sont la plupart du temps des mélanges de pop, rock, hip hop, R&B
-                  et de musique électronique.
+                  La K-pop possède un large spectre musical mais aussi visuel. L'Institut National de l'Audiovisuel
+                  français, l'INA, définit la K-pop comme étant une "musique de synthèse accompagnée de chorégraphies
+                  calibrées au millimètre, portée par des chanteurs séduisants, à la pointe de la mode". Les chansons
+                  sont des mélanges de pop, rock, hip hop et de musique électronique. C‘est souvent populaire parmi les
+                  jeunes filles.
               </p>
-              <span class="source">Source : dude trust me</span>
+              <span class="source">Source :fr.wikipedia.org/wiki/K-pop</span>
               <div class="paragraph">
                   Artistes:
-
                   <div class="multi-link">
                       <span>BTS</span>
                       <div>
@@ -591,9 +580,7 @@
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-
                   ,
-
                   <div class="multi-link">
                       <span>Girls' Generation</span>
                       <div>
@@ -605,7 +592,6 @@
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-
                   ,
                   <div class="multi-link">
                       <span>BIGBANG</span>
@@ -618,7 +604,6 @@
                                   src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-
               </div>
               </div>
               <div class="spotify-integ">
@@ -654,10 +639,10 @@
                   Latin Pop
               </h2>
               <p>
-                  La pop latino désigne un genre de musique pop dont les éléments sonores sont extraits de musiques
-                  latino-américaines. La pop latino s'associe particulièrement à la musique pop, rock et dance.
+                  La pop latino mélange la pop et la musique latino-américaine. Souvent avec des rythmes forts, il donne
+                  envie de danser. Le chanteur chante souvent en espagnol.
               </p>
-              <span class="source">Source : dude trust me</span>
+              <span class="source">Source :fr.wikipedia.org/wiki/Pop_latino</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
@@ -718,15 +703,12 @@
                   Baroque Pop
               </h2>
               <p>
-                  Le genre est moins agressif, moins commercial, mais plus sérieux que la musiquecde l'époque. La
-                  pop baroque se différencie du
-                  <a href="rock.html#progressif">rock progressif</a>, qui fait également usage d'une instrumentation de
-                  musique classique, de par sa structure simpliste plus proche de la pop standard, et par son contenu
-                  lyrique accessible à tous.
-                  La pop baroque est une musique traditionnellement mélancolique et dramatique par rapport au sunshine
-                  pop.
+                  Moins agressif, moins commercial, mais plus sérieux que la musique de l’époque, la pop baroque utilise
+                  une instrumentation de musique classique, sa structure simpliste est plus proche de la pop standard.
+                  Il est plus accessible que la musique classique. C ‘est une musique traditionnellement mélancolique et
+                  dramatique par rapport au sunshine pop.
               </p>
-              <span class="source">Source : dude trust me</span>
+              <span class="source">Source : fr.wikipedia.org/wiki/Pop_baroque</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
@@ -771,16 +753,21 @@
           </section>
           <section id="today">
               <h2>
-               Aujourd'hui  
+                  Aujourd'hui
               </h2>
               <div class="paragraph">
-               <p> La Pop a toujours une place importante dans la musique. Nous écoutons la musique pop tous les jours à la télévision, la radio, au concert... La Pop est facile d’accès, ce qui la rend plus populaire dans la vie quotidienne. Les chansons sont jolies et simples, tout le monde peut les écouter et partager leurs émotions sur la musique.
-               <p> La création est toujours essentielle dans la musique pop, ce qui mène à créer des nouveaux types de musique et la mode dans le monde .</p>
-              <span class="button"><a href="#">Retour en haut de la page !</a></span>
+                  <p> La Pop a toujours une place importante dans la musique. Nous écoutons la musique pop tous les
+                      jours à la télévision, la radio, au concert... La Pop est facile d’accès, ce qui la rend plus
+                      populaire dans la vie quotidienne. Les chansons sont jolies et simples, tout le monde peut les
+                      écouter et partager leurs émotions sur la musique.
+                      <p> La création est toujours essentielle dans la musique pop, ce qui mène à créer des nouveaux
+                          types de musique et la mode dans le monde .</p>
+                      <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
       </main>
       <footer>
           <iframe src="../footer.html"></iframe>
       </footer>
   </body>
+
   </html>
