--- a/music/pop.html
+++ b/music/pop.html
@@ -93,7 +93,7 @@
               <p>
                   Le style de musique s'est divisé au fil du temps en plusieurs sous-genres (liste non exhaustive) :
               </p>
-              <span class="source">Source : dude trust me</span>
+              <span class="source">Source : fr.wikipedia.org/wiki/Pop_(musique)</span>
               <ul>
                   <li>
                       <a href="#Classic">Classic pop</a>
@@ -135,7 +135,7 @@
                   jolis. La musique pop s’appelle aussi standard pop. Normalement le chanteur chante avec une guitare ou
                   un piano.
               </p>
-              <span class="source">Source : fr.wikipedia.org/wiki/Pop_(musique)</span>
+              <span class="source">Source :en.wikipedia.org/wiki/Classic_Pop_(magazine)</span>
               <div class="paragraph">Artistes:
                   <div class="multi-link">
                       <span> Bob Dylan</span>
@@ -196,7 +196,7 @@
               </h2>
               <p>
                   Le Pop Rock, mêlant le style Pop et Rock, est basé sur la guitare. Le pop Rock est plus doux et plus
-                  accessible que le<a href="rock.html#">Rock and Roll</a>. C ‘est une version plus commerciale dans le
+                  accessible que le <a href="rock.html#">Rock and Roll</a>. C ‘est une version plus commerciale dans le
                   domaine de la musique et ceux qui écoutent
                   sont souvent des jeunes. Les instruments utilisés sont le plus souvent la guitare électrique, la
                   basse, la batterie, le clavier et le synthétiseur.
