--- a/music/alternative.html
+++ b/music/alternative.html
@@ -180,11 +180,11 @@
                 </div>
                 <div class="spotify-integ">
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/2wA4NDDRLoEPyA4Zq6J1G1" 
+                        <iframe src="https://open.spotify.com/embed/track/2wA4NDDRLoEPyA4Zq6J1G1"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/7kzKAuUzOITUauHAhoMoxA" 
+                        <iframe src="https://open.spotify.com/embed/track/7kzKAuUzOITUauHAhoMoxA"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
@@ -361,11 +361,11 @@
                 </div>
                 <div class="spotify-integ">
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/2x8evxqUlF0eRabbW2JBJd" 
+                        <iframe src="https://open.spotify.com/embed/track/2x8evxqUlF0eRabbW2JBJd"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/5FVd6KXrgO9B3JPmC8OPst" 
+                        <iframe src="https://open.spotify.com/embed/track/5FVd6KXrgO9B3JPmC8OPst"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
@@ -425,7 +425,8 @@
                         <a href="https://en.wikipedia.org/wiki/Ben_McKee" target="_blank">Ben McKee</a> (bassiste) et
                         <a href="https://en.wikipedia.org/wiki/Daniel_Platzman" target="_blank">Daniel Platzman</a>
                         (batteur).
-                        Le groupe a été formé en 2009 et sorti ses premiers EP <em>Imagin Dragons</em> (éponyme) et <em>Hell and
+                        Le groupe a été formé en 2009 et sorti ses premiers EP <em>Imagin Dragons</em> (éponyme) et
+                        <em>Hell and
                             Silence</em> en 2010.
                     </p>
                     <p>
@@ -504,11 +505,11 @@
                 </div>
                 <div class="spotify-integ">
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/62yJjFtgkhUrXktIoSjgP2" 
+                        <iframe src="https://open.spotify.com/embed/track/62yJjFtgkhUrXktIoSjgP2"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/6Q2JimwoGgG5W9HdmH1hmq" 
+                        <iframe src="https://open.spotify.com/embed/track/6Q2JimwoGgG5W9HdmH1hmq"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
@@ -678,11 +679,11 @@
                 </div>
                 <div class="spotify-integ">
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/47wPvRG8FEwbZP22UBgTQr" 
+                        <iframe src="https://open.spotify.com/embed/track/47wPvRG8FEwbZP22UBgTQr"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/64tSc0F8az64sF1olXiNl5" 
+                        <iframe src="https://open.spotify.com/embed/track/64tSc0F8az64sF1olXiNl5"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
@@ -832,12 +833,12 @@
                 </div>
                 <div class="spotify-integ">
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/5c5a2Ptu8eyIpljhQHjIqk" 
+                        <iframe src="https://open.spotify.com/embed/track/5c5a2Ptu8eyIpljhQHjIqk"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/1Q3t9fWvHUXKsMmpD2XpUu"  allowtransparency="true"
-                            allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/1Q3t9fWvHUXKsMmpD2XpUu"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
                 <figure class="yt-integ">
@@ -859,6 +860,161 @@
                     </div>
                     <figcaption>
                         Deux titres de Cage The Elephant, Ain't No Rest for the Wicked (2008) et Cold Cold Cold (2015)
+                    </figcaption>
+                </figure>
+                <span class="source">Source : wikipedia.org</span>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
+            </article>
+            <article>
+                <h3>
+                    <div class="multi-link">
+                        <span>Caesars</span>
+                        <div>
+                            spotify:artist:4rGrN4XDYhP6dUAZMvcuHr
+                            <a href="https://open.spotify.com/artist/4rGrN4XDYhP6dUAZMvcuHr" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/Caesars" target="_blank"><img class="wiki-icon"
+                                    src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                        </div>
+                    </div>
+                </h3>
+                <div class="no-overflow">
+                    <figure class="float-right bordered img-align">
+                        <img class="rounded-corners"
+                            src="https://img.discogs.com/NnsmSdVe3E3YTkOu8oL_ie3h-xY=/fit-in/300x300/filters:strip_icc():format(jpeg):mode_rgb():quality(40)/discogs-images/A-164109-1156380313.jpeg.jpg"
+                            width="200" alt="Caesars" />
+                        <figcaption>
+                            Les artistes du groupe
+                        </figcaption>
+                    </figure>
+                    <p>
+                        Groupe d'origine suédoise, il est composé 4 membres : César Vidal (chanteur, guitariste), David
+                        Lindqvist
+                        (bassiste),
+                        Nino Keller (batteur) et Klas Åhlund (clavier).
+                        Le groupe a été formé en 1995 et est en pause depuis 2012.
+                    </p>
+                    <p>
+                        Le groupe totalise 6 albums (studio) :
+                    </p>
+                    <ul>
+                        <li>
+                            <div class="multi-link">
+                                <span>Youth Is Wasted on the Young</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/3GLKAyhL47rx9n6iV1ccfw" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                </div>
+                            </div>
+                            (1998)
+                        </li>
+                        <li>
+                            <div class="multi-link">
+                                <span>Cherry Kicks</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/2jVxhH1xg6EIc87rGM1Ogt" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_lrt4YVuFl_-k-t5XrNsAIo_W8hSZgrNSE"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2000)
+                        </li>
+                        <li>
+                            <div class="multi-link">
+                                <span>Love for the Streets</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/2ucS4apziMY7gaBIQc2tal" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_llzjtv17I5QhZ7HD3gsEZbrvzTDbp9pDM"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2002)
+                        </li>
+                        <li>
+                            <div class="multi-link">
+                                <span>39 Minutes of Bliss (In an Otherwise Meaningless World)</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/6KdlSMMpezbfNKZYd4JTbM" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://fr.wikipedia.org/wiki/39_Minutes_of_Bliss_(In_an_Otherwise_Meaningless_World)"
+                                        target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                            alt="wikipedia link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_kJoJOpBKMYFGF7-UnrEpPs4WO2xXFbH-w"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2003)
+                        </li>
+                        <li>
+                            <div class="multi-link">
+                                <span>Paper Tigers</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/26j4DuV2gfgY8aFWSDCkCM" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://fr.wikipedia.org/wiki/Paper_Tigers" target="_blank"><img
+                                            class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                </div>
+                            </div>
+                            (2005)
+                        </li>
+                        <li>
+                            <div class="multi-link">
+                                <span>Strawberry Weed</span>
+                                <div>
+                                    <a href="https://open.spotify.com/album/1Yj5hc5u73IMzQzLEtforP" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png"
+                                            alt="spotify link" /></a>
+                                    <a href="https://fr.wikipedia.org/wiki/Strawberry_Weed"
+                                        target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
+                                            alt="wikipedia link" /></a>
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_msJ7jkgp5iu8W9ikyFk_mY1cWMxF3Nh5Y"
+                                        target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
+                                            alt="youtube link" /></a>
+                                </div>
+                            </div>
+                            (2008)
+                        </li>
+                    </ul>
+                </div>
+                <div class="spotify-integ">
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/0MXi112L7wWfoNYG0FJVQP"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/4rVnE0SZwV04aiANWJvhpr"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+                <figure class="yt-integ">
+                    <div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/w869Avr_fXI"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/uzdVgi113JQ"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <figcaption>
+                        Deux titres de Caesars, Jerk It Out (2002) et Over´fore It Started (2002)
                     </figcaption>
                 </figure>
                 <span class="source">Source : wikipedia.org</span>
